@@ -201,7 +201,7 @@ Index: libx11/configure.ac
 ===================================================================
 --- libx11.orig/configure.ac
 +++ libx11/configure.ac
-@@ -477,6 +477,7 @@
+@@ -476,6 +476,7 @@
  	   nls/mulelao-1/Makefile
  	   nls/nokhchi-1/Makefile
  	   nls/pt_BR.UTF-8/Makefile
