@@ -4,6 +4,8 @@ libx11 (2:1.2-1) UNRELEASED; urgency=low
   * Remove obsolete ld.so.conf handling from libx11-6 postinst.
   * Run autoreconf on build; add build-deps on automake, libtool, xutils-dev.
   * Handle parallel builds.
+  * Refresh patches 003_recognize_glibc_2.3.2_locale_names.diff and
+    012_ru_RU_UTF-8_XLC_LOCALE.diff.
 
  -- Julien Cristau <jcristau@debian.org>  Sun, 21 Dec 2008 18:09:12 +0100
 
